--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,7 @@
 
 
 {% block start %}
+
 <div id="wrapper" class="flex flex-col justify-between h-screen">
   <!-- header-->
   <div class="bg-white py-4 shadow dark:bg-gray-800">
@@ -35,8 +36,9 @@
     >
       <h1 class="lg:text-3xl text-xl font-semibold mb-6">Registrieren</h1>
       <!--<p class="mb-2 text-black text-lg"> Register to manage your account </p>-->
-      <form action="index.html" method='POST'>
+      <form method='POST'>
         {% csrf_token %}
+
         <!--<div class="flex lg:flex-row flex-col lg:space-x-2">
                     <input type="text" placeholder="First Name"  class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                     <input type="text" placeholder="Last Name" class="bg-gray-200 mb-2 shadow-none  dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
