--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,6 +36,18 @@
     >
       <h1 class="lg:text-3xl text-xl font-semibold mb-6">Registrieren</h1>
       <!--<p class="mb-2 text-black text-lg"> Register to manage your account </p>-->
+
+      <div>
+        <style>
+            h5{
+              color:red;
+            }
+        </style>
+        {% for message in messages %}
+            <h5>{{ message }} </h5>
+        {% endfor %}
+      </div>
+
       <form method='POST'>
         {% csrf_token %}
 
