--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         <div class="right-side lg:pr-4">
              <!-- upload -->
             <a href="#"
-                class="bg-pink-500 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white">
+                class="bg-gradient-to-br from-yellow-600 via-orange-500 to-yellow-600 flex font-bold hover:text-white hover:shadow-2xl items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white justify-center">
                 <ion-icon name="add-circle" class="-mb-1
                  mr-1 opacity-90 text-xl uilus-circle"></ion-icon> Upload Pics / Videos
             </a>
