--- a/templates/signin.html
+++ b/templates/signin.html
@@ -28,20 +28,20 @@
   <!-- Content-->
   <div>
     <div
-      class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-"
+      class="lg:p-12 max-w-md lg:max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-"
     >
       <h1 class="lg:text-3xl text-xl font-semibold mb-6">Log in</h1>
       <form action="index.html">
         <input
           type="text"
           placeholder="Username"
-          class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
+          class="bg-gray-200 mb-2 shadow-none "
           style="border: 1px solid #d3d5d8 !important"
         />
         <input
           type="text"
           placeholder="***********"
-          class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800"
+          class="bg-gray-200 mb-2 shadow-none  "
           style="border: 1px solid #d3d5d8 !important"
         />
         <div class="flex justify-between my-4">
