--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,20 +5,23 @@
 
 <div id="wrapper" class="flex flex-col justify-between h-screen">
   <!-- header-->
-  <div class="bg-white py-4 shadow dark:bg-gray-800">
+  <div class="bg-white py-4 shadow ">
     <div class="max-w-6xl mx-auto">
       <div class="flex items-center lg:justify-between justify-around">
-        <a href="trending.html">
-          <b><h1 style="font-size: 1.5rem">Socol</h1></b>
-        </a>
+        <div class="flex gap-2 items-center">
+          <img src="{% static "assets/images/logo.svg" %}" alt="logo" class="w-6 h-6">
+          <a href="{% url "core:home_view" %}">
+            <b><h1 class="bg-gradient-to-br from-yellow-600 via-orange-500 to-yellow-600 bg-clip-text text-transparent" style="font-size: 1.5rem">Sascha Schmittinger</h1></b>
+          </a>
+        </div>
 
         <div
-          class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm"
+          class="capitalize flex font-semibold  lg:block my-2 space-x-3 text-center text-sm"
         >
           <a
-            href="signup.html"
-            class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white"
-            >Register</a
+            href="#"
+            class="bg-gradient-to-br from-yellow-600 via-orange-500 to-yellow-600 px-6 py-3 rounded-md shadow text-white hover:text-white hover:shadow-2xl"
+            >Login</a
           >
         </div>
       </div>
@@ -30,39 +33,57 @@
     <div
       class="lg:p-12 max-w-md lg:max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-"
     >
-      <h1 class="lg:text-3xl text-xl font-semibold mb-6">Log in</h1>
+
+    {% for message in messages %}
+      
+    <div role="alert" class="alert alert-{{ message.tags }} mb-4">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          class="h-6 w-6 shrink-0 stroke-current">
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+        </svg>
+        <span>{{ message }}</span>
+    </div>
+ 
+   {% endfor %}
+
+
+      <h1 class="lg:text-3xl text-xl font-semibold mb-6 text-center">Log in</h1>
       <form action="index.html">
         <input
           type="text"
-          placeholder="Username"
+          name="username"
+          placeholder="Benutzername"
           class="bg-gray-200 mb-2 shadow-none "
           style="border: 1px solid #d3d5d8 !important"
         />
         <input
-          type="text"
+          type="password"
+          name="password"
           placeholder="***********"
           class="bg-gray-200 mb-2 shadow-none  "
           style="border: 1px solid #d3d5d8 !important"
         />
         <div class="flex justify-between my-4">
-          <div class="checkbox">
-            <input type="checkbox" id="chekcbox1" checked />
-            <label for="chekcbox1"
-              ><span class="checkbox-icon"></span>Remember Me</label
-            >
-          </div>
-          <a href="#"> Forgot Your Password? </a>
+        
+          <a href="#"> dein Passwort vergessen? </a>
         </div>
         <button
           type="submit"
-          class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full"
+          class="bg-gradient-to-br from-yellow-600 via-orange-500 to-yellow-600 px-6 py-3 w-full rounded-md shadow text-white hover:text-white hover:shadow-2xl"
         >
           Login
         </button>
         <div class="text-center mt-5 space-x-2">
           <p class="text-base">
-            Not registered?
-            <a href="form-register.html" class=""> Create a account </a>
+            Nicht regestriert?
+            <a href="{% url "core:signup_view" %}" class=""> Registrieren </a>
           </p>
         </div>
       </form>
