--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,8 @@
                     Your Video size Must be Maxmium 999MB
                 </div>
             </div>
+
+               
             
              <!-- Notification -->
 
@@ -149,6 +151,7 @@
                 <a href="#" class="see-all">See all</a>
             </div>
 
+  
             <!-- profile -->
 
             <a href="#">
@@ -175,6 +178,26 @@
 
         <!-- left sidebar-->
         <div class="space-y-5 flex-shrink-0 lg:w-7/12">
+
+            {% for message in messages %}
+      
+            <div role="alert" class="alert alert-{{ message.tags }} mb-4">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  class="h-6 w-6 shrink-0 stroke-current">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                </svg>
+                <span>{{ message }}</span>
+            </div>
+         
+           {% endfor %}
+
 
             <!-- post 1-->
             <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
