--- a/templates/setting.html
+++ b/templates/setting.html
@@ -25,7 +25,7 @@
 
             <div class="container m-auto"> 
 
-                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"> Account Setting </h1>
+                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"> Account Einstellungen </h1>
                 <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
                     <li class="uk-active"><a href="#">General</a></li>
                     <li><a href="#">Profile</a></li>
@@ -45,31 +45,31 @@
     
                        <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
                            <div>
-                               <label for=""> First name</label>
-                               <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
+                               <label for=""> Vorname</label>
+                               <input type="text" placeholder="first name.." class="shadow-none bg-gray-100">
                            </div>
                            <div>
-                               <label for=""> Last name</label>
-                               <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
+                               <label for=""> Nachname</label>
+                               <input type="text" placeholder="last name.." class="shadow-none bg-gray-100">
                             </div>
                             <div class="col-span-2">
                                 <label for=""> Email</label>
-                                <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
+                                <input type="text" placeholder="E-Mail Adresse..." class="shadow-none bg-gray-100">
                             </div>
                             <div class="col-span-2">
-                                <label for="about">About me</label>  
+                                <label for="about">Über mich</label>  
                                 <textarea id="about" name="about" rows="3"  class="shadow-none bg-gray-100"></textarea>
                             </div> 
                             <div class="col-span-2">
-                                <label for=""> Location</label>
+                                <label for=""> Wohnort</label>
                                 <input type="text" placeholder="" class="shadow-none bg-gray-100">
                             </div>
                             <div>
-                               <label for=""> Working at</label>
+                               <label for=""> Beruf</label>
                                <input type="text" placeholder="" class="shadow-none bg-gray-100">
                             </div> 
                             <div>
-                               <label for=""> Relationship </label>
+                               <label for=""> Beziehungsstatus </label>
                                <select id="relationship" name="relationship"  class="shadow-none bg-gray-100">
                                 <option value="0">None</option>
                                 <option value="1">Single</option>
@@ -96,7 +96,7 @@
                     <div class="space-y-3">
                         <div class="flex justify-between items-center">
                             <div>
-                                <h4> Who can follow me ?</h4>
+                                <h4> Wer kann mir folgen ?</h4>
                                 <div>  </div>
                             </div>
                             <div class="switches-list -mt-8 is-large">
@@ -108,7 +108,7 @@
                         <hr>
                         <div class="flex justify-between items-center">
                             <div>
-                                <h4> Show my activities ?</h4>
+                                <h4> meine Aktivitäten zeigen ?</h4>
                                 <div>  </div>
                             </div>
                             <div class="switches-list -mt-8 is-large">
@@ -120,7 +120,7 @@
                         <hr>
                         <div class="flex justify-between items-center">
                             <div>
-                                <h4> Search engines?</h4>
+                                <h4> Suchmaschine?</h4>
                                 <div>  </div>
                             </div>
                             <div class="switches-list -mt-8 is-large">
@@ -132,7 +132,7 @@
                         <hr>
                         <div class="flex justify-between items-center">
                             <div>
-                                <h4> Allow Commenting?</h4>
+                                <h4> dir Komentare schreiben?</h4>
                                 <div>  </div>
                             </div>
                             <div class="switches-list -mt-8 is-large">
