--- a/templates/index.html
+++ b/templates/index.html
@@ -162,7 +162,7 @@
             </a>
             <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                 <ul>
-                    <li><a href="#"> Account setting </a> </li>
+                    <li><a href="{% url "core:settings" %}"> Einstellungen </a> </li>
                     <li><a href="#">explore </a> </li>
                     <li><a href="#"> Help </a> </li>
                     <li><a href="{% url "core:logout_view" %}"> Log Out</a></li>
