--- a/templates/setting.html
+++ b/templates/setting.html
@@ -1,172 +1,93 @@
-{% load static %}
+{% extends "base.html" %}
+{% load static %}       
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{% static 'assets/images/favicon.png' %}" rel="icon" type="image/png">
-    <title>Settings</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'assets/css/icons.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/uikit.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/tailwind.css' %}">
+  
+{% block start %}
 
-</head>
+ <div class="container m-auto"> 
+    <a href="{% url "core:home_view" %}" class="text-red-500 hover:text-red-400 "> <- zur Homepage</a>
+    <h1 class="text-2xl leading-none text-gray-800 tracking-tight mt-4"> Einstellungen User:<span class="font-bold text-slate-800 ml-3">{{ user.username }}</span> </h1>
+    {% comment %} <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
+        <li class="uk-active"><a href="#">General</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Notification</a></li>
+        <li><a href="#">Social links</a></li>
+        <li><a href="#">Billing</a></li>
+        <li><a href="#">Security</a></li>
+    </ul> {% endcomment %}
+    {% for message in messages %}
+      
+    <div role="alert" class="alert alert-{{ message.tags }} mb-1 mt-2">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          class="h-6 w-6 shrink-0 stroke-current">
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+        </svg>
+        <span>{{ message }}</span>
+    </div>
+ 
+   {% endfor %}
 
-<body>
-
-
-       
-
+    <br>
+    <hr>
+        <div class="grid lg:grid-cols-3 mt-12 gap-8 ">
           
+            <div class="bg-white rounded-md lg:shadow-lg shadow col-span-3 mx-16 ">
 
-            <div class="container m-auto"> 
-
-                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"> Account Einstellungen </h1>
-                <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
-                    <li class="uk-active"><a href="#">General</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Notification</a></li>
-                    <li><a href="#">Social links</a></li>
-                    <li><a href="#">Billing</a></li>
-                    <li><a href="#">Security</a></li>
-                </ul>
-
-                <div class="grid lg:grid-cols-3 mt-12 gap-8">
-                    <div>
-                        <h3 class="text-xl mb-2"> Basic</h3>
-                        <p></p>
-                    </div>
-                    <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
-    
-                       <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
-                           <div>
-                               <label for=""> Vorname</label>
-                               <input type="text" placeholder="first name.." class="shadow-none bg-gray-100">
-                           </div>
-                           <div>
-                               <label for=""> Nachname</label>
-                               <input type="text" placeholder="last name.." class="shadow-none bg-gray-100">
-                            </div>
-                            <div class="col-span-2">
-                                <label for=""> Email</label>
-                                <input type="text" placeholder="E-Mail Adresse..." class="shadow-none bg-gray-100">
-                            </div>
-                            <div class="col-span-2">
-                                <label for="about">Über mich</label>  
-                                <textarea id="about" name="about" rows="3"  class="shadow-none bg-gray-100"></textarea>
-                            </div> 
-                            <div class="col-span-2">
-                                <label for=""> Wohnort</label>
-                                <input type="text" placeholder="" class="shadow-none bg-gray-100">
-                            </div>
-                            <div>
-                               <label for=""> Beruf</label>
-                               <input type="text" placeholder="" class="shadow-none bg-gray-100">
-                            </div> 
-                            <div>
-                               <label for=""> Beziehungsstatus </label>
-                               <select id="relationship" name="relationship"  class="shadow-none bg-gray-100">
-                                <option value="0">None</option>
-                                <option value="1">Single</option>
-                                <option value="2">In a relationship</option>
-                                <option value="3">Married</option>
-                                <option value="4">Engaged</option>
-                              </select>
-                            </div>
-                       </div> 
-    
-                       <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
-                           <button class="p-2 px-4 rounded bg-gray-50 text-red-500"> Cancel </button>
-                           <button type="button" class="button bg-blue-700"> Save </button>
-                       </div>
-    
-                    </div>
-
-                    <div>
-                        <h3 class="text-xl mb-2"> Privacy</h3>
-                        <p> </p>
-                    </div>
-                    <div class="bg-white rounded-md lg:shadow-lg shadow lg:p-6 p-4 col-span-2">
-
-                    <div class="space-y-3">
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h4> Wer kann mir folgen ?</h4>
-                                <div>  </div>
-                            </div>
-                            <div class="switches-list -mt-8 is-large">
-                                <div class="switch-container">
-                                    <label class="switch"><input type="checkbox"><span class="switch-button"></span> </label>
-                                </div>
-                            </div>
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="grid grid-cols-2 gap-3 lg:p-7 p-4">
+                    
+                        <div class="col-span-2">
+                            <label for="about">Profilbild</label>  
+                            <img class="h-12 w-10" src="{{ user_profile.profile_img.url }}" alt="Bild">
+                            <input type="file" name="image" value=" " class="shadow-none bg-white"></input>
+                        </div> 
+                        <div class="col-span-2">
+                            <label for="about">Über mich</label>  
+                            <textarea id="about" name="bio" rows="3"  class="shadow-none bg-gray-100">           {{ user_profile.bio }} </textarea>
+                        </div> 
+                        <div class="col-span-2">
+                            <label for=""> Wohnort</label>
+                            <input type="text" name="location" value="{{ user_profile.location }}" class="shadow-none bg-gray-100">
                         </div>
-                        <hr>
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h4> meine Aktivitäten zeigen ?</h4>
-                                <div>  </div>
-                            </div>
-                            <div class="switches-list -mt-8 is-large">
-                                <div class="switch-container">
-                                    <label class="switch"><input type="checkbox" checked><span class="switch-button"></span> </label>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h4> Suchmaschine?</h4>
-                                <div>  </div>
-                            </div>
-                            <div class="switches-list -mt-8 is-large">
-                                <div class="switch-container">
-                                    <label class="switch"><input type="checkbox"><span class="switch-button"></span> </label>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h4> dir Komentare schreiben?</h4>
-                                <div>  </div>
-                            </div>
-                            <div class="switches-list -mt-8 is-large">
-                                <div class="switch-container">
-                                    <label class="switch"><input type="checkbox"><span class="switch-button"></span> </label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-    
-                    </div>
-                    <br>
+                
+                    </div> 
 
-                </div>
+                    <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
+                        <a href="{% url "core:home_view" %}" class="p-2 px-4 rounded bg-red-500 text-white hover:shadow-xl hover:text-white"> Abrechen</a>
+                        <button type="submit" class=" bg-green-700 rounded text-white px-2 hover:shadow-xl hover:text-white"> speichern </button>
+                    </div>
+               </form>
 
             </div>
+
+            <div class="mb-28">
+              
+           <div class="space-y-3">
             
+                
+            </div>  
+
+            </div>
+            <br>
+
         </div>
 
     </div>
+    
+</div>
+
+</div>
 
 
     
 
- <!-- Scripts
-    ================================================== -->
-    <script src="{% static 'assets/js/tippy.all.min.js' %}"></script>  
-    <script src="{% static 'assets/js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'assets/js/uikit.js' %}"></script>
-    <script src="{% static 'assets/js/simplebar.js' %}"></script>
-    <script src="{% static 'assets/js/custom.js' %}"></script>
-
-
-    <script src="{% static '../../unpkg.com/ionicons%405.2.3/dist/ionicons.js' %}"></script>
-</body>
-
-</html>
+    {% endblock start %}
