--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,9 @@
  {% block start %}
  {% endblock start %}
 
+ {% include "components/footer.html" %}
 
 
- <!-- Scripts
-    ================================================== -->
     <script src="{% static 'assets/js/tippy.all.min.js' %}"></script>  
     <script src="{% static 'assets/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'assets/js/uikit.js' %}"></script>
