--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,7 +5,7 @@
 
 <div id="wrapper" class="flex flex-col justify-between h-screen">
   <!-- header-->
-  <div class="bg-white py-4 shadow ">
+  <div class="bg-white py-4 shadow-2xl ">
     <div class="max-w-6xl mx-auto">
       <div class="flex items-center lg:justify-between justify-around">
         <div class="flex gap-2 items-center">
@@ -19,9 +19,9 @@
           class="capitalize flex font-semibold  lg:block my-2 space-x-3 text-center text-sm"
         >
           <a
-            href="#"
+            href="{% url "core:signup_view" %}"
             class="bg-gradient-to-br from-yellow-600 via-orange-500 to-yellow-600 px-6 py-3 rounded-md shadow text-white hover:text-white hover:shadow-2xl"
-            >Login</a
+            >Regestieren</a
           >
         </div>
       </div>
@@ -34,24 +34,7 @@
       class="lg:p-12 max-w-md lg:max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-"
     >
 
-    {% for message in messages %}
-      
-    <div role="alert" class="alert alert-{{ message.tags }} mb-4">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          class="h-6 w-6 shrink-0 stroke-current">
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-        </svg>
-        <span>{{ message }}</span>
-    </div>
- 
-   {% endfor %}
+{% include "components/messages.html" %}
 
 
       <h1 class="lg:text-3xl text-xl font-semibold mb-6 text-center">Log in</h1>
@@ -91,22 +74,7 @@
     </div>
   </div>
 
-  <!-- Footer -->
 
-  <div class="lg:mb-5 py-3 uk-link-reset">
-    <div
-      class="flex flex-col items-center justify-between lg:flex-row max-w-6xl mx-auto lg:space-y-0 space-y-3"
-    >
-      <div class="flex space-x-2 text-gray-700 uppercase">
-        <a href="#"> About</a>
-        <a href="#"> Help</a>
-        <a href="#"> Terms</a>
-        <a href="#"> Privacy</a>
-      </div>
-      <p class="capitalize">© copyright 2020 by socol</p>
-    </div>
-  </div>
-</div>
 
 <!--<script>
     
