--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                     <div class="flex flex-1 items-center space-x-4">
                         <a href="#">
                             <div class="bg-gradient-to-tr from-yellow-600 to-pink-600 p-0.5 rounded-full">  
-                                <img src="{{ user_profile.profile_img.url }}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
+                                <img src="{{ post.author_profile_img }}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
                             </div>
                         </a>
                         <span class="block capitalize font-semibold "> <small>{{ post.user }} </small> <br> 
