--- a/static/assets/css/tailwind.css
+++ b/static/assets/css/tailwind.css
@@ -1558,6 +1558,14 @@ html {
   margin-top: 1.5rem;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .block {
   display: block;
 }
