--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -49,7 +49,7 @@
             <a href="#"
                 class="bg-gradient-to-br from-yellow-600 via-orange-500 to-yellow-600 flex font-bold hover:text-white hover:shadow-2xl items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white justify-center uppercase">
                 <ion-icon name="add-circle" class="-mb-1
-                 mr-1 opacity-90 text-xl uilus-circle"></ion-icon> Upload Bilder  
+                 mr-1 opacity-90 text-xl uilus-circle"></ion-icon> Post anlegen
             </a>
              <!-- upload dropdown box -->
             <div uk-dropdown="pos: top-right;mode:click ; animation: uk-animation-slide-bottom-small" class="header_dropdown">
@@ -79,9 +79,10 @@
                         <div>
                             <input type="file" name="image_upload">
                             {% comment %} <a href="#" class="button soft-warning small"> Datei auswählen</a> {% endcomment %}
-                            <textarea class="button soft-warning small" name="capton" placeholder="caption..."></textarea>
+                            <textarea class="button soft-warning small" name="capton" placeholder="den zu postenen Text..."></textarea>
                             <br>
-                            <button class="bg-gradient-to-br from-yellow-600 via-orange-500 to-yellow-600 flex font-bold hover:text-white hover:shadow-2xl items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white justify-center w-full uppercase" type="submit">upload</button>
+                            <button class="bg-gradient-to-br from-green-700 via-green-600 to-green-700 flex font-bold hover:text-white hover:shadow-2xl items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white justify-center w-full uppercase" type="submit">speichern</button>
+                            <a class="bg-gradient-to-br from-red-700 via-red-600 to-red-700 flex font-bold hover:text-white hover:shadow-2xl items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white justify-center w-full uppercase mt-2" href="{% url "core:home_view" %}">abrechen</a>
                         </div>
                     </form>
                      {% comment %} <a href="#" class="uk-text-muted mt-3 uk-link"
