--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <title>Profile - {{username}}</title>
+
     <!-- <link rel="icon" href="images/fav.png" type="image/png" sizes="16x16"> -->
 
     <link rel="stylesheet" href="{% static 'css/main.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/color.css' %}" />
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}" />
+    <title>Profile:{{ user_profile.user.username }} </title>
   </head>
   <body>
     <!--<div class="se-pre-con"></div>-->
@@ -194,9 +195,9 @@
 
     <script
       data-cfasync="false"
-      src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"
+      src="{% static 'js/email-decode.min.js' %}"
     ></script>
-    <script src="js/main.min.js"></script>
+    <script src="{% static "js/main.min.js" %}"></script>
     <script src="{% static 'js/script.js' %}"></script>
   </body>
 </html>
